Fix a couple of dialogue issues (including a missing location string)

--- a/[CP] Rodney O'Brien/manifest.json
+++ b/[CP] Rodney O'Brien/manifest.json
@@ -31,6 +31,10 @@
          "UniqueID": "yri.ProjectYellogTownOverhaul",
          "IsRequired": false,
       },
+      {
+         "UniqueID": "JoXW.MobilePhone",
+         "IsRequired": false,
+      },
    ],
    "UpdateKeys": [
       "Nexus:13437"
