Bugs fixes, additional content, fixed compatibility for SVE, added compatibility for Pride Festival, added back Event Lookup compatibility
Added compatibility for the Pride Season Festival: Rodney will now attend on the first day
Fixed bugged schedule for Scarp Crossing
Fixed bugged schedule for visiting the Bookworm Mobile (A New Dream)
Fixed bugged special order
Fixed map patch for the mini-library not working with SVE
Added context tag for autographed photo
Buffed autographed photo spawn rate (after nerfing it way too much)
Fixed a broken question dialogue
Fixed an issue with gift tastes and dialogue for Marlon (SVE) that has been there since release and was never reported before.
Fixed Rodney walking on water on Friday with SVE
Fixed compatibility for Love Festival
Fix an overlap with caroline on the Ice Festival with SVE
Added back compatibility for Event Lookup (random events are now hidden)
SPOILER Added new outfit, schedule and dialogue for Green Rain Event

--- a/[CP] Rodney O'Brien/Data/Locations/MapPatches.json
+++ b/[CP] Rodney O'Brien/Data/Locations/MapPatches.json
@@ -84,7 +84,7 @@
 //Marketpalooza
 {
             "Action": "EditMap",
-            "Target": "Maps/Fellowclown.SW_Marketpalooza",
+            "Target": "Maps/Fellowclown.PC_Marketpalooza",
             "FromFile": "Assets/Maps/Marketpalooza_patch.tbin",
             "PatchMode": "Replace",
             "ToArea": {
@@ -94,7 +94,7 @@
                 "Height": 6,
             },
             "When": {
-                "HasMod": "Fellowclown.SW"
+                "HasMod": "Fellowclown.PC"
             }
         },
 
@@ -119,7 +119,7 @@
        {
             "Action": "EditMap",
             "Target": "Maps/Town",
-            "FromFile": "Assets/Maps/Town_patch_SVE.tbin",
+            "FromFile": "Assets/Maps/Town_patch_SVE.tmx",
             "PatchMode": "Overlay",
             "ToArea": {
                 "X": 96,
