--- a/[CP] Rodney O'Brien/manifest.json
+++ b/[CP] Rodney O'Brien/manifest.json
@@ -2,11 +2,7 @@
    "Name": "[NPC] Rodney O'Brien",
    "Author": "TheFrenchDodo",
    "Description": "Adds a friendly writer that also happens to be Elliott's uncle.",
-<<<<<<< Updated upstream
    "Version": "3.2.4",
-=======
-   "Version": "3.2.3",
->>>>>>> Stashed changes
    "UniqueID": "TheFrenchDodo.RodneyOBrien",
    "ContentPackFor": {
       "UniqueID": "Pathoschild.ContentPatcher"
@@ -16,12 +12,8 @@
     "DH.MEEP.VanillaLetters": "",
    "Dependencies": [
       {
-         "UniqueID": "LemurKat.EastScarpe.CP",
-         "IsRequired": false
-      },
-      {
          "UniqueID": "Lemurkat.EastScarp",
-         "IsRequired": false
+         "IsRequired": true
       },
       {
          "UniqueID": "Lumisteria.TtilesheetsOutdoor",
@@ -43,19 +35,12 @@
          "UniqueID": "JoXW.MobilePhone",
          "IsRequired": false,
       },
-<<<<<<< Updated upstream
          {
          "UniqueID": "DaisyNiko.Tilesheets",
          "IsRequired": true
       },
-=======
->>>>>>> Stashed changes
    ],
    "UpdateKeys": [
       "Nexus:13437"
    ],
-<<<<<<< Updated upstream
 }
-=======
-}
->>>>>>> Stashed changes
